RESOLVED FIXED142664
Sites that use a device-width viewport but don't have enough height to fill the view are scaled up
https://bugs.webkit.org/show_bug.cgi?id=142664
Summary Sites that use a device-width viewport but don't have enough height to fill t...
Tim Horton
Reported 2015-03-13 01:44:23 PDT
Sites that use a device-width viewport but don't have enough height to fill the view are scaled up
Attachments
Patch (9.66 KB, patch)
2015-03-13 01:44 PDT, Tim Horton
benjamin: review+
Tim Horton
Comment 1 2015-03-13 01:44:47 PDT
Tim Horton
Comment 2 2015-03-13 14:08:16 PDT
Note You need to log in before you can comment on or make changes to this bug.